--- a/config/database.yml
+++ b/config/database.yml
@@ -84,6 +84,4 @@ test:
 #
 production:
   <<: *default
-  database: The_budget_app_production
-  username: The_budget_app
-  password: <%= ENV["THE_BUDGET_APP_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
